fix: add comments and make ui more informative

--- a/utils/analysis.ipynb
+++ b/utils/analysis.ipynb
@@ -826,34 +826,39 @@
     "# Model parameters that will be tested\n",
     "model_params = {\n",
     "    'lgr': {\n",
-    "        'model': LogisticRegression(random_state = SEED),\n",
+    "        'model': LogisticRegression(random_state = SEED), # Logistic Regression model\n",
     "        'params': {\n",
-    "            'C': [0.1, 0.5, 1.0, 1.5, 2.0],\n",
-    "            'max_iter': [100, 200, 300, 400, 500],\n",
-    "            'solver': ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga']\n",
+    "            'C': [0.1, 0.5, 1.0, 1.5, 2.0], # Controls regularization strength (inverse); smaller values mean stronger regularization.\n",
+    "            'max_iter': [100, 200, 300, 400, 500], # Maximum iterations for convergence\n",
+    "            'solver': ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga'] # Optimization algorithm\n",
     "        }\n",
     "    },\n",
     "\n",
+    "    # - newton-cg: An optimization algorithm that uses Newton's method with a conjugate gradient approach. It is suitable for large datasets and supports L2 regularization.\n",
+    "    # - lbfgs: Stands for Limited-memory Broyden–Fletcher–Goldfarb–Shanno algorithm. It is an optimization algorithm that approximates the Broyden–Fletcher–Goldfarb–Shanno (BFGS) algorithm using limited memory. It is efficient for large datasets and supports L2 regularization.\n",
+    "    # - sag: Stands for Stochastic Average Gradient. It is an optimization algorithm that is faster for large datasets and suitable for L2 regularization. It approximates the gradient of the entire dataset by averaging the gradients of subsets of data.\n",
+    "    # - saga: An extension of SAG that supports L1 regularization (sparse datasets) in addition to L2 regularization. It combines the benefits of both SAG and the ability to handle sparsity.\n",
+    "\n",
     "    'gnb': {\n",
-    "        'model': GaussianNB(),\n",
+    "        'model': GaussianNB(), # Gaussian Naive Bayes model\n",
     "        'params': {\n",
-    "            'var_smoothing': [1e-9, 1e-8, 1e-7, 1e-6, 1e-5]\n",
+    "            'var_smoothing': [1e-9, 1e-8, 1e-7, 1e-6, 1e-5] # Smoothing parameter to handle numerical stability\n",
     "        }\n",
     "    },\n",
     "\n",
     "    'mnb': {\n",
-    "        'model': MultinomialNB(),\n",
+    "        'model': MultinomialNB(), # Multinomial Naive Bayes model\n",
     "        'params': {\n",
-    "            'alpha': [0.1, 0.5, 1.0, 1.5, 2.0],\n",
-    "            'fit_prior': [True, False]\n",
+    "            'alpha': [0.1, 0.5, 1.0, 1.5, 2.0], # Additive smoothing parameter\n",
+    "            'fit_prior': [True, False] # Whether to learn class prior probabilities\n",
     "        }\n",
     "    },\n",
     "\n",
     "    'cnb': {\n",
-    "        'model': ComplementNB(),\n",
+    "        'model': ComplementNB(), # Complement Naive Bayes model (for imbalanced data)\n",
     "        'params': {\n",
-    "            'alpha': [0.1, 0.5, 1.0, 1.5, 2.0],\n",
-    "            'fit_prior': [True, False]           \n",
+    "            'alpha': [0.1, 0.5, 1.0, 1.5, 2.0], # Additive smoothing parameter\n",
+    "            'fit_prior': [True, False] # Whether to learn class prior probabilities\n",
     "        }\n",
     "    }\n",
     "}"
@@ -950,7 +955,7 @@
     "\n",
     "# Iteratively test the models and cross validate\n",
     "for key, values in model_params.items():\n",
-    "    gs = GridSearchCV(values['model'], values['params'], scoring='f1', cv=4, n_jobs=-1) # Using cv=4 so the validation size the same as the test size (80 rows)\n",
+    "    gs = GridSearchCV(values['model'], values['params'], scoring='f1', cv=4, n_jobs=-1) # Using cv=4 so the validation size the same as the test size\n",
     "    gs.fit(X_train_tfidf, y_train)\n",
     "    gs_results.append(\n",
     "        {\n",
