fix: add more details on req for version control

--- a/utils/analysis.ipynb
+++ b/utils/analysis.ipynb
@@ -14,32 +14,15 @@
    "outputs": [],
    "source": [
     "# conda create -n sentimen_ulasan_env python=3.11\n",
-    "# conda activate sentimen_ulasan_env"
+    "# conda activate sentimen_ulasan_env\n",
+    "# pip install -r ./utils/requirements_utils.txt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install Libraries using Pip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install numpy\n",
-    "%pip install matplotlib\n",
-    "%pip install scikit-learn\n",
-    "%pip install pandas\n",
-    "%pip install nltk\n",
-    "%pip install sastrawi\n",
-    "%pip install xgboost\n",
-    "%pip install seaborn\n",
-    "%pip install wordcloud\n",
-    "%pip install streamlit"
+    "## Import Libraries"
    ]
   },
   {
